# FastAPI-try

./: Makefile  alembic.ini  pyproject.toml
docker/: Dockerfile  docker-compose.yml  gunicorn.conf.py  start.sh
server/: __main__.py
server/api/v1/authentication/: endpoints.py  schemas.py
server/api/v1/authentication/endpoints/: login.py  oauth.py
server/api/v1/healthcheck/: schemas.py
server/api/v1/staff/: endpoints.py  schemas.py
server/application/: builder.py  dev.py  events.py  routers.py
server/apps/authentication/: shortcuts.py
server/apps/authentication/sequrity/: authentication.py  dto.py
server/apps/authentication/sequrity/jwt/: authentication.py
server/apps/authentication/sequrity/oauth/: authentication.py  dto.py  integrations.py
server/apps/core/api/v1/: endpoints.py
server/apps/staff/: dtos.py  endpoints.py  models.py  services.py
server/config/: settings.py
server/config/application/: builder.py  dev.py  events.py  middlewares.py  responses.py  routers.py
server/config/infrastructure/databases/: postgres.py
server/config/infrastructure/databases/migrations/: env.py
server/config/infrastructure/databases/migrations/versions/: 79ffbf180482_init.py
server/shared/api/: responses.py
server/shared/dependencies/: auth.py  database.py  settings.py
server/shared/di/: __init__.py  dependency_provider.py
server/shared/utils/: database.py
tests/: conftest.py
tests/test_apps/test_staff/: test_endpoints.py
